Add Railway deployment configuration
✅ Added Railway-specific files:
- railway.json: Railway deployment config
- start-railway.js: Startup script with DB migrations
- Updated package.json start script for Railway

🚀 Ready for Railway deployment with SQLite persistence

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node start-railway.js",
+    "start:prod": "node dist/index.js",
     "lint": "eslint src/",
     "test": "vitest",
     "db:migrate": "tsx src/db/migrate.ts",
