Fix Railway monorepo build configuration
✅ Updated nixpacks.toml to work with npm workspaces:
- Use root 'npm install' for workspace dependencies
- Use 'npm run build:server' from root package.json
- Use 'npm start' workspace command
- Keep Node.js 18 + Python3 for SQLite compilation

🔧 Should resolve npm install failures

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,16 +2,10 @@
 nixPkgs = ['nodejs_18', 'python3']
 
 [phases.install]
-cmds = [
-  'cd server',
-  'npm install'
-]
+cmds = ['npm install']
 
-[phases.build]
-cmds = [
-  'cd server', 
-  'npm run build'
-]
+[phases.build] 
+cmds = ['npm run build:server']
 
 [start]
-cmd = 'cd server && npm start'
+cmd = 'npm start'
