--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
     "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.17.0",
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^12.6.2",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
