Fix Railway build: Server-only production build
✅ Updated nixpacks.toml for server-only build:
- Install only in server directory
- Skip devDependencies (--omit=dev)
- Avoids drizzle-kit → better-sqlite3 dependency
- Uses libsql for SQLite (no native compilation)
- Node.js 18 compatible

🚀 Should deploy successfully without build errors

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,10 @@
 [phases.setup]
-nixPkgs = ['nodejs_20', 'python3', 'python3-dev', 'gcc', 'g++', 'make']
-nixpkgsArchive = 'ba913eda2df8eb72147259189d55932012df6301'
+nixPkgs = ['nodejs_18']
 
 [phases.install]
 cmds = [
   'cd server',
-  'npm install --verbose'
+  'npm ci --omit=dev --prefer-offline'
 ]
 
 [phases.build]
